@@ -4,6 +4,7 @@
 
 #include  "TransportSendStrategy.h"
 #include  "TransportReceiveStrategy.h"
+#include  "ThreadPerConnectionSendTask.h"
 #include  "EntryExit.h"
 
 
